.metadata/.plugins/org.eclipse.cdt.ui/MotionSensorExampleBBB.build.log

**** Build of configuration Debug for project MotionSensorExampleBBB ****

make all 
Building file: ../MotionSensor/sensor.c
Invoking: Cross GCC Compiler
arm-linux-gnueabihf-gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"MotionSensor/sensor.d" -MT"MotionSensor/sensor.d" -o "MotionSensor/sensor.o" "../MotionSensor/sensor.c"
../MotionSensor/sensor.c: In function ‘ms_update’:
../MotionSensor/sensor.c:156:4: error: incompatible types when assigning to type ‘struct Quaternion’ from type ‘int32_t *’
  q = _q;
    ^
../MotionSensor/sensor.c:157:2: warning: implicit declaration of function ‘GetGravity’ [-Wimplicit-function-declaration]
  GetGravity(&gravity, &q);
  ^
../MotionSensor/sensor.c:158:2: warning: implicit declaration of function ‘GetYawPitchRoll’ [-Wimplicit-function-declaration]
  GetYawPitchRoll(ypr, &q, &gravity);
  ^
../MotionSensor/sensor.c: At top level:
../MotionSensor/sensor.c:192:9: error: conflicting types for ‘GetGravity’
 uint8_t GetGravity(struct VectorFloat *v, struct Quaternion *q) {
         ^
../MotionSensor/sensor.c:157:2: note: previous implicit declaration of ‘GetGravity’ was here
  GetGravity(&gravity, &q);
  ^
../MotionSensor/sensor.c:199:9: error: conflicting types for ‘GetYawPitchRoll’
 uint8_t GetYawPitchRoll(float *data, struct Quaternion *q, struct VectorFloat *gravity) {
         ^
../MotionSensor/sensor.c:158:2: note: previous implicit declaration of ‘GetYawPitchRoll’ was here
  GetYawPitchRoll(ypr, &q, &gravity);
  ^
make: *** [MotionSensor/sensor.o] Error 1

**** Build Finished ****
